fixed hero img text not centering on mobile and added img-wrapper to each hero

--- a/server/public/sass/bulma/sass/base/classes.sass
+++ b/server/public/sass/bulma/sass/base/classes.sass
@@ -4,6 +4,7 @@
 
 .container
   position: relative
+  margin: 0 auto
   +desktop
     margin: 0 auto
     max-width: 960px
